# CFI_MIDOT

./: .env  .gitignore  Dockerfile  Makefile  README.md  google_sheet.py  main.py  ngo_list.py  pyproject.toml  ranking.py  ranking_service.py  requirements.txt  run_ngo_toolkit.bat  scrapy.cfg  setup.py
cfi_midot/: items.py  items_loaders.py  pipelines.py  settings.py
cfi_midot/spiders/: guide_star_spider.py
src/: main.py
src/ngo_toolkit/: settings.py
src/ngo_toolkit/ranking/: ranking_service.py
src/ngo_toolkit/scrapers/cfi_midot_scrapy/: items_loaders.py  pipelines.py  settings.py
src/ngo_toolkit/scrapers/cfi_midot_scrapy/spiders/: guide_star_spider.py
src/ngo_toolkit/uploaders/: google_sheet.py
